// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button color=link 1`] = `
<button
  className="sc-bdVaJa htUrVg"
  color="link"
  size="small"
/>
`;

exports[`Button with large size and margin and enableRounded=false 1`] = `
<button
  className="sc-bdVaJa hYGeor"
  color="success"
  size="large"
  style={
    Object {
      "marginBottom": 6,
      "marginRight": 6,
    }
  }
/>
`;

exports[`Button with large size and margin and enableRounded=true 1`] = `
<button
  className="sc-bdVaJa jowoqV"
  color="success"
  size="large"
  style={
    Object {
      "marginBottom": 6,
      "marginRight": 6,
    }
  }
/>
`;

exports[`Button with small size and margin 1`] = `
<button
  className="sc-bdVaJa bQCpom"
  color="success"
  size="small"
  style={
    Object {
      "marginBottom": 6,
      "marginRight": 6,
    }
  }
/>
`;

exports[`Button with small size and margin and enableRounded=false 1`] = `
<button
  className="sc-bdVaJa fpTczy"
  color="success"
  size="small"
  style={
    Object {
      "marginBottom": 6,
      "marginRight": 6,
    }
  }
/>
`;

exports[`Disable rounded variant 1`] = `
<button
  className="sc-bdVaJa jDeDyb"
  color="primary"
  size="normal"
/>
`;

exports[`Outline variant 1`] = `
<button
  className="sc-bdVaJa jYzkum"
  color="primary"
  size="normal"
/>
`;

exports[`Rounded variant 1`] = `
<button
  className="sc-bdVaJa ldqfJP"
  color="primary"
  size="normal"
/>
`;

exports[`it works 1`] = `
<button
  className="sc-bdVaJa izFiew"
  color="primary"
  size="normal"
/>
`;
